website/versioned_docs/version-1.7.x/reference/sql/index.md
---
title: 'SQL Reference'
sidebar_label: 'SQL Reference'
pagination_prev: 'reference/index'
sidebar_position: 2
pagination_next: null
---

This section provides a comprehensive reference for SQL support in Spice.ai, including syntax, data types, operators, functions, and system features. The reference is organized by topic for ease of navigation.

## Table of Contents

### [SELECT Syntax](select.md)

- [WITH Clause](select.md#with-clause)
- [SELECT Clause](select.md#select-clause)
- [FROM Clause](select.md#from-clause)
- [WHERE Clause](select.md#where-clause)
- [JOIN Clause](select.md#join-clause)
- [GROUP BY Clause](select.md#group-by-clause)
- [HAVING Clause](select.md#having-clause)
- [UNION Clause](select.md#union-clause)
- [ORDER BY Clause](select.md#order-by-clause)
- [LIMIT Clause](select.md#limit-clause)
- [EXCLUDE and EXCEPT Clause](select.md#exclude-and-except-clause)

### [Subqueries](subqueries.md)

- [Subquery Operators](subqueries.md#subquery-operators)
- [SELECT Clause Subqueries](subqueries.md#select-clause-subqueries)
- [FROM Clause Subqueries](subqueries.md#from-clause-subqueries)
- [WHERE Clause Subqueries](subqueries.md#where-clause-subqueries)
- [HAVING Clause Subqueries](subqueries.md#having-clause-subqueries)
- [Subquery Categories](subqueries.md#subquery-categories)

### [EXPLAIN](explain.md)

- [EXPLAIN ANALYZE](explain.md#explain-analyze)

### [Information Schema](information_schema.md)

- [SHOW TABLES](information_schema.md#show-tables)
- [SHOW COLUMNS](information_schema.md#show-columns)
- [SHOW ALL (configuration options)](information_schema.md#show-all-configuration-options)

### [Operators and Literals](operators.md)

- [Numerical Operators](operators.md#numerical-operators)
- [Comparison Operators](operators.md#comparison-operators)
- [Logical Operators](operators.md#logical-operators)
- [Bitwise Operators](operators.md#bitwise-operators)
- [Other Operators](operators.md#other-operators)

### [Scalar Functions](scalar_functions.md)

- [Math Functions](scalar_functions.md#math-functions)
- [Conditional Functions](scalar_functions.md#conditional-functions)
- [String Functions](scalar_functions.md#string-functions)
- [Binary String Functions](scalar_functions.md#binary-string-functions)
- [Regular Expression Functions](scalar_functions.md#regular-expression-functions)
- [Time and Date Functions](scalar_functions.md#time-and-date-functions)
- [Array Functions](scalar_functions.md#array-functions)
- [Struct Functions](scalar_functions.md#struct-functions)
- [Map Functions](scalar_functions.md#map-functions)
- [Hashing Functions](scalar_functions.md#hashing-functions)
- [Union Functions](scalar_functions.md#union-functions)
- [Other Functions](scalar_functions.md#other-functions)

### [Aggregate Functions](aggregate_functions.md)

- [General Aggregate Functions](aggregate_functions.md#general-functions)
- [Statistical Aggregate Functions](aggregate_functions.md#statistical-functions)
- [Approximate Aggregate Functions](aggregate_functions.md#approximate-functions)

### [JSON Functions and Operators](json.md)

- [JSON Functions](json.md#json-functions)
- [JSON Operators](json.md#json-operators)
- [Usage Examples](json.md#usage-examples)

### [Search](search.md)

- [Vector Search (`vector_search`)](search.md#vector-search-vector_search)
- [Full-Text Search (`text_search`)](search.md#full-text-search-text_search)
- [Lexical Search: LIKE, =, and Regex](search.md#lexical-search-like--and-regex)

### [Prepared Statements](prepared_statements.md)

- [Positional Arguments](prepared_statements.md#positional-arguments)

Refer to each section for detailed syntax, supported features, and examples.
